--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -1,10 +1,12 @@
+.form-component-container {
+    border: 1px solid;
+    grid-row: span 1;
+}
+
 .form-container {
     display: flex;
-
-
 }
 
  form > button {
     border: 1px solid;
-
 }
